--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,14 +13,14 @@
         android:text="0"
         android:layout_alignParentEnd="true"
         android:textAlignment="viewEnd"
-        android:id="@+id/resultTextView"
+        android:id="@+id/displayView"
         />
 
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/resultTextView"
+        android:layout_below="@+id/displayView"
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp"
         android:columnCount="4"
@@ -33,80 +33,96 @@
             android:id="@+id/button_seven"
             android:text="7"
             android:onClick="numberPressed"
+            android:tag="7"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_eight"
             android:text="8"
             android:onClick="numberPressed"
+            android:tag="8"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_nine"
             android:text="9"
             android:onClick="numberPressed"
+            android:tag="9"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_divide"
             android:text="/"
             android:onClick="operationPressed"
+            android:tag="/"
             />
 
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_four"
             android:text="4"
             android:onClick="numberPressed"
+            android:tag="4"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_five"
             android:text="5"
             android:onClick="numberPressed"
+            android:tag="5"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_six"
             android:text="6"
             android:onClick="numberPressed"
+            android:tag="6"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_multiply"
             android:text="*"
             android:onClick="operationPressed"
+            android:tag="*"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_one"
             android:text="1"
             android:onClick="numberPressed"
+            android:tag="1"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_two"
             android:text="2"
             android:onClick="numberPressed"
+            android:tag="2"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_three"
             android:text="3"
             android:onClick="numberPressed"
+            android:tag="3"
             />
 
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_less"
             android:text="-"
             android:onClick="operationPressed"
+            android:tag="-"
             />
 
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_zero"
             android:text="0"
             android:onClick="numberPressed"
+            android:tag="0"
             android:layout_columnSpan="2"
             android:layout_gravity="fill"
             />
         <Button style="@style/AppTheme.CalculatorButton"
-            android:id="@+id/button_dot"
-            android:text="."
+            android:id="@+id/button_comma"
+            android:text=","
+            android:tag=","
+            android:onClick="commaPressed"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_plus"
             android:text="+"
             android:onClick="operationPressed"
+            android:tag="+"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_backspace"
@@ -116,13 +132,14 @@
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_equals"
             android:text="="
+            android:onClick="equalsPressed"
             android:layout_columnSpan="2"
             />
         <Button style="@style/AppTheme.CalculatorButton"
             android:id="@+id/button_c"
             android:text="C"
+            android:onClick="cPressed"
             />
-
 
     </GridLayout>
 
